preload fileEditorProvider ep
GitOrigin-RevId: c1a6d226ede1d51ff2f4f69720edec56ee710c1c